[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jwm.cache"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
redis = [
    "redis"
]

test = [
    "pytest"
]

format = [
    "isort",
    "black"
]

dev = [
    "jwm.cache[test, format, redis]"
]