[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jwm.cache"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
redis = [
    "redis"
]

test = [
    "pytest",
    "pytest-cov",
    "coverage"
]

format = [
    "isort",
    "black"
]

dev = [
    "jwm.cache[test, format, redis]"
]

[tool.pytest.ini_options]
minversion = 6.0
console_output_style = "count"
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]